--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "phaser": "^3.19.0",
+    "polygon": "^1.0.2",
+    "sat": "^0.7.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
